fix[styles] fix navbar brand vertical align v2

--- a/frontend/src/app/navigation/components/navbar/navbar.component.scss
+++ b/frontend/src/app/navigation/components/navbar/navbar.component.scss
@@ -13,6 +13,7 @@
     font-family: 'Yesteryear', cursive;
     color: $color-text-lightest;
     font-size: 3rem;
+    padding: 1.4rem 1.5rem;
 
     .logo {
       vertical-align: middle;
